// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a ListItem control 1`] = `
<ListItem
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[MockFunction]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding=""
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip=""
  top=""
  useedit={false}
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[MockFunction]}
    onDoubleClick={[Function]}
    onError={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding=""
    reset={false}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip=""
    top=""
    useedit={false}
    visible={true}
    widget={null}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Item
        bottom=""
        className="ui-listitem"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={true}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        hiddenLeftButton={false}
        hiddenRightButton={false}
        href={
          Object {
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        id=""
        layout={5}
        left=""
        leftButton={null}
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        obj="ListItem"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseOut={[Function]}
        onSelect={[Function]}
        onUpdate={[Function]}
        padding=""
        rightButton={null}
        selected={false}
        sizing="normal"
        stacked={false}
        style={Object {}}
        testing={true}
        theme={null}
        title="test title"
        tooltip=""
        top=""
        useedit={false}
        visible={true}
        widget={null}
        width=""
        xcss={null}
      >
        <Wrapper
          bottom=""
          className="ui-listitem"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          hiddenLeftButton={false}
          hiddenRightButton={false}
          href={
            Object {
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          id=""
          layout={5}
          left=""
          leftButton={null}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="ListItem"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onError={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onSelect={[Function]}
          onUpdate={[Function]}
          padding=""
          reset={false}
          rightButton={null}
          selected={false}
          sizing="normal"
          stacked={false}
          style={Object {}}
          testing={true}
          theme={null}
          title="test title"
          tooltip=""
          top=""
          useedit={false}
          visible={true}
          widget={null}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.li
              className="ui-item ui-listitem"
              id=""
              nohover={false}
              onBlur={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
            >
              <li
                className="ui-item ui-listitem sc-jTzLTM fJmtEf"
                id=""
                onBlur={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                selected={false}
                style={Object {}}
              >
                <Title
                  bottom=""
                  className="ui-listitem"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={true}
                  err={null}
                  errorMessage=""
                  focus={false}
                  height=""
                  hiddenLeftButton={false}
                  hiddenRightButton={false}
                  href={
                    Object {
                      "selectHandler": [Function],
                      "sizing": "normal",
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  leftButton={null}
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  obj="ListItem"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseOut={[Function]}
                  onSelect={[Function]}
                  onUpdate={[Function]}
                  padding=""
                  rightButton={null}
                  selected={false}
                  sizing="normal"
                  stacked={false}
                  style={
                    Object {
                      "padding": "2px 4px",
                    }
                  }
                  testing={true}
                  theme={null}
                  title="test title"
                  tooltip=""
                  top=""
                  useedit={false}
                  visible={true}
                  widget={null}
                  width=""
                  xcss={null}
                >
                  <Wrapper
                    bottom=""
                    className="ui-listitem"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={true}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    hiddenLeftButton={false}
                    hiddenRightButton={false}
                    href={
                      Object {
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id=""
                    layout={5}
                    left=""
                    leftButton={null}
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    obj="ListItem"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onMouseOut={[Function]}
                    onSelect={[Function]}
                    onUpdate={[Function]}
                    padding=""
                    reset={false}
                    rightButton={null}
                    selected={false}
                    sizing="normal"
                    stacked={false}
                    style={
                      Object {
                        "padding": "2px 4px",
                      }
                    }
                    testing={true}
                    theme={null}
                    title="test title"
                    tooltip=""
                    top=""
                    useedit={false}
                    visible={true}
                    widget={null}
                    width=""
                    xcss={null}
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#c0c0c0",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "itemHoverColor": "#bedb39",
                          "selectedBackgroundColor": "#1f8a70",
                          "selectedForegroundColor": "#ffe11a",
                          "titleBarBackgroundColor": "#004358",
                          "titleBarForegroundColor": "#ffe11a",
                          "tooltipBackgroundColor": "#708090",
                          "tooltipForegroundColor": "#ffffff",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.div
                        className="ui-title-bar ui-listitem"
                        disabled={true}
                        layout={5}
                        style={
                          Object {
                            "padding": "2px 4px",
                          }
                        }
                        visible={true}
                      >
                        <div
                          className="ui-title-bar ui-listitem sc-iwsKbI gvFsGi"
                          disabled={true}
                          style={
                            Object {
                              "padding": "2px 4px",
                            }
                          }
                        >
                          <Styled(Label)
                            bottom=""
                            className="ui-title"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={true}
                            err={null}
                            errorMessage=""
                            focus={false}
                            height=""
                            hiddenLeftButton={false}
                            hiddenRightButton={false}
                            href={
                              Object {
                                "selectHandler": [Function],
                                "sizing": "normal",
                              }
                            }
                            id=""
                            layout={5}
                            left=""
                            leftButton={null}
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="ListItem"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onDoubleClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyPress={[Function]}
                            onMouseOut={[Function]}
                            onSelect={[Function]}
                            onUpdate={[Function]}
                            padding=""
                            rightButton={null}
                            selected={false}
                            sizing="normal"
                            stacked={false}
                            style={
                              Object {
                                "padding": "2px 4px",
                              }
                            }
                            testing={true}
                            text="test title"
                            theme={null}
                            title="test title"
                            tooltip=""
                            top=""
                            useedit={false}
                            visible={true}
                            widget={null}
                            width=""
                            xcss={
                              Array [
                                "
	text-align: left;
	flex: 5;
",
                              ]
                            }
                          >
                            <Label
                              bottom=""
                              className="ui-title sc-gqjmRU hmXoVc"
                              contentEditable={false}
                              controlled={true}
                              direction="right"
                              disabled={true}
                              err={null}
                              errorMessage=""
                              focus={false}
                              height=""
                              hiddenLeftButton={false}
                              hiddenRightButton={false}
                              href={
                                Object {
                                  "selectHandler": [Function],
                                  "sizing": "normal",
                                }
                              }
                              id=""
                              layout={5}
                              left=""
                              leftButton={null}
                              location="none"
                              noedit={false}
                              nohover={false}
                              noripple={false}
                              obj="ListItem"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onDoubleClick={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              onMouseOut={[Function]}
                              onSelect={[Function]}
                              onUpdate={[Function]}
                              padding=""
                              rightButton={null}
                              selected={false}
                              sizing="normal"
                              stacked={false}
                              style={
                                Object {
                                  "padding": "2px 4px",
                                }
                              }
                              testing={true}
                              text="test title"
                              theme={null}
                              title="test title"
                              tooltip=""
                              top=""
                              useedit={false}
                              visible={true}
                              widget={null}
                              width=""
                              xcss={
                                Array [
                                  "
	text-align: left;
	flex: 5;
",
                                ]
                              }
                            >
                              <Wrapper
                                bottom=""
                                className="ui-title sc-gqjmRU hmXoVc"
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={true}
                                err={null}
                                errorMessage=""
                                focus={false}
                                height=""
                                hiddenLeftButton={false}
                                hiddenRightButton={false}
                                href={
                                  Object {
                                    "selectHandler": [Function],
                                    "sizing": "normal",
                                  }
                                }
                                id=""
                                layout={5}
                                left=""
                                leftButton={null}
                                location="none"
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                obj="ListItem"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onDoubleClick={[Function]}
                                onError={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onMouseOut={[Function]}
                                onSelect={[Function]}
                                onUpdate={[Function]}
                                padding=""
                                reset={false}
                                rightButton={null}
                                selected={false}
                                sizing="normal"
                                stacked={false}
                                style={
                                  Object {
                                    "padding": "2px 4px",
                                  }
                                }
                                testing={true}
                                text="test title"
                                theme={null}
                                title="test title"
                                tooltip=""
                                top=""
                                useedit={false}
                                visible={true}
                                widget={null}
                                width=""
                                xcss={
                                  Array [
                                    "
	text-align: left;
	flex: 5;
",
                                  ]
                                }
                              >
                                <ThemeProvider
                                  theme={
                                    Object {
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#c0c0c0",
                                      "color": "#000000",
                                      "headerBackgroundColor": "#004358",
                                      "headerForegroundColor": "#ffffff",
                                      "headerHoverColor": "#ffe11a",
                                      "hoverColor": "#c0c0c0",
                                      "inputBorderColor": "#c0c0c0",
                                      "itemHoverColor": "#bedb39",
                                      "selectedBackgroundColor": "#1f8a70",
                                      "selectedForegroundColor": "#ffe11a",
                                      "titleBarBackgroundColor": "#004358",
                                      "titleBarForegroundColor": "#ffe11a",
                                      "tooltipBackgroundColor": "#708090",
                                      "tooltipForegroundColor": "#ffffff",
                                      "transitionDelay": "0.5s",
                                    }
                                  }
                                >
                                  <styled.span
                                    className="ui-label ui-title sc-gqjmRU hmXoVc"
                                    contentEditable={false}
                                    disabled={true}
                                    innerRef={[Function]}
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onDoubleClick={[Function]}
                                    onKeyDown={[Function]}
                                    onKeyPress={[Function]}
                                    sizing="normal"
                                    style={
                                      Object {
                                        "padding": "2px 4px",
                                      }
                                    }
                                    suppressContentEditableWarning={true}
                                    visible={true}
                                  >
                                    <span
                                      className="ui-label ui-title sc-gqjmRU hmXoVc sc-dnqmqq gNPGAn"
                                      contentEditable={false}
                                      disabled={true}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onDoubleClick={[Function]}
                                      onKeyDown={[Function]}
                                      onKeyPress={[Function]}
                                      style={
                                        Object {
                                          "padding": "2px 4px",
                                        }
                                      }
                                      suppressContentEditableWarning={true}
                                    >
                                      test title
                                    </span>
                                  </styled.span>
                                </ThemeProvider>
                              </Wrapper>
                            </Label>
                          </Styled(Label)>
                        </div>
                      </styled.div>
                    </ThemeProvider>
                  </Wrapper>
                </Title>
              </li>
            </styled.li>
          </ThemeProvider>
        </Wrapper>
      </Item>
    </ThemeProvider>
  </Wrapper>
</ListItem>
`;

exports[`Test making ListItem control invisible 1`] = `
<ListItem
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding=""
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip=""
  top=""
  useedit={false}
  visible={false}
  widget={null}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onError={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding=""
    reset={false}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip=""
    top=""
    useedit={false}
    visible={false}
    widget={null}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <Item
        bottom=""
        className="ui-listitem"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        hiddenLeftButton={false}
        hiddenRightButton={false}
        href={
          Object {
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        id=""
        layout={5}
        left=""
        leftButton={null}
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        obj="ListItem"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseOut={[Function]}
        onSelect={[Function]}
        onUpdate={[Function]}
        padding=""
        rightButton={null}
        selected={false}
        sizing="normal"
        stacked={false}
        style={Object {}}
        testing={true}
        theme={null}
        title="test title"
        tooltip=""
        top=""
        useedit={false}
        visible={false}
        widget={null}
        width=""
        xcss={null}
      >
        <Wrapper
          bottom=""
          className="ui-listitem"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage=""
          focus={false}
          height=""
          hiddenLeftButton={false}
          hiddenRightButton={false}
          href={
            Object {
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          id=""
          layout={5}
          left=""
          leftButton={null}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="ListItem"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDoubleClick={[Function]}
          onError={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onSelect={[Function]}
          onUpdate={[Function]}
          padding=""
          reset={false}
          rightButton={null}
          selected={false}
          sizing="normal"
          stacked={false}
          style={Object {}}
          testing={true}
          theme={null}
          title="test title"
          tooltip=""
          top=""
          useedit={false}
          visible={false}
          widget={null}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "itemHoverColor": "#bedb39",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "titleBarBackgroundColor": "#004358",
                "titleBarForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.li
              className="ui-item ui-listitem"
              id=""
              nohover={false}
              onBlur={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
            >
              <li
                className="ui-item ui-listitem sc-jTzLTM fJmtEf"
                id=""
                onBlur={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                selected={false}
                style={Object {}}
              >
                <Title
                  bottom=""
                  className="ui-listitem"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={false}
                  err={null}
                  errorMessage=""
                  focus={false}
                  height=""
                  hiddenLeftButton={false}
                  hiddenRightButton={false}
                  href={
                    Object {
                      "selectHandler": [Function],
                      "sizing": "normal",
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  leftButton={null}
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  obj="ListItem"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onMouseOut={[Function]}
                  onSelect={[Function]}
                  onUpdate={[Function]}
                  padding=""
                  rightButton={null}
                  selected={false}
                  sizing="normal"
                  stacked={false}
                  style={
                    Object {
                      "padding": "2px 4px",
                    }
                  }
                  testing={true}
                  theme={null}
                  title="test title"
                  tooltip=""
                  top=""
                  useedit={false}
                  visible={false}
                  widget={null}
                  width=""
                  xcss={null}
                >
                  <Wrapper
                    bottom=""
                    className="ui-listitem"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    hiddenLeftButton={false}
                    hiddenRightButton={false}
                    href={
                      Object {
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id=""
                    layout={5}
                    left=""
                    leftButton={null}
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    obj="ListItem"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onError={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onMouseOut={[Function]}
                    onSelect={[Function]}
                    onUpdate={[Function]}
                    padding=""
                    reset={false}
                    rightButton={null}
                    selected={false}
                    sizing="normal"
                    stacked={false}
                    style={
                      Object {
                        "padding": "2px 4px",
                      }
                    }
                    testing={true}
                    theme={null}
                    title="test title"
                    tooltip=""
                    top=""
                    useedit={false}
                    visible={false}
                    widget={null}
                    width=""
                    xcss={null}
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#c0c0c0",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "itemHoverColor": "#bedb39",
                          "selectedBackgroundColor": "#1f8a70",
                          "selectedForegroundColor": "#ffe11a",
                          "titleBarBackgroundColor": "#004358",
                          "titleBarForegroundColor": "#ffe11a",
                          "tooltipBackgroundColor": "#708090",
                          "tooltipForegroundColor": "#ffffff",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.div
                        className="ui-title-bar ripple ui-listitem"
                        disabled={false}
                        layout={5}
                        style={
                          Object {
                            "padding": "2px 4px",
                          }
                        }
                        visible={false}
                      >
                        <div
                          className="ui-title-bar ripple ui-listitem sc-iwsKbI ikQKDN"
                          disabled={false}
                          style={
                            Object {
                              "padding": "2px 4px",
                            }
                          }
                        >
                          <Styled(Label)
                            bottom=""
                            className="ui-title"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            err={null}
                            errorMessage=""
                            focus={false}
                            height=""
                            hiddenLeftButton={false}
                            hiddenRightButton={false}
                            href={
                              Object {
                                "selectHandler": [Function],
                                "sizing": "normal",
                              }
                            }
                            id=""
                            layout={5}
                            left=""
                            leftButton={null}
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="ListItem"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onDoubleClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyPress={[Function]}
                            onMouseOut={[Function]}
                            onSelect={[Function]}
                            onUpdate={[Function]}
                            padding=""
                            rightButton={null}
                            selected={false}
                            sizing="normal"
                            stacked={false}
                            style={
                              Object {
                                "padding": "2px 4px",
                              }
                            }
                            testing={true}
                            text="test title"
                            theme={null}
                            title="test title"
                            tooltip=""
                            top=""
                            useedit={false}
                            visible={false}
                            widget={null}
                            width=""
                            xcss={
                              Array [
                                "
	text-align: left;
	flex: 5;
",
                              ]
                            }
                          >
                            <Label
                              bottom=""
                              className="ui-title sc-gqjmRU hmXoVc"
                              contentEditable={false}
                              controlled={true}
                              direction="right"
                              disabled={false}
                              err={null}
                              errorMessage=""
                              focus={false}
                              height=""
                              hiddenLeftButton={false}
                              hiddenRightButton={false}
                              href={
                                Object {
                                  "selectHandler": [Function],
                                  "sizing": "normal",
                                }
                              }
                              id=""
                              layout={5}
                              left=""
                              leftButton={null}
                              location="none"
                              noedit={false}
                              nohover={false}
                              noripple={false}
                              obj="ListItem"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onDoubleClick={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              onMouseOut={[Function]}
                              onSelect={[Function]}
                              onUpdate={[Function]}
                              padding=""
                              rightButton={null}
                              selected={false}
                              sizing="normal"
                              stacked={false}
                              style={
                                Object {
                                  "padding": "2px 4px",
                                }
                              }
                              testing={true}
                              text="test title"
                              theme={null}
                              title="test title"
                              tooltip=""
                              top=""
                              useedit={false}
                              visible={false}
                              widget={null}
                              width=""
                              xcss={
                                Array [
                                  "
	text-align: left;
	flex: 5;
",
                                ]
                              }
                            >
                              <Wrapper
                                bottom=""
                                className="ui-title sc-gqjmRU hmXoVc"
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={false}
                                err={null}
                                errorMessage=""
                                focus={false}
                                height=""
                                hiddenLeftButton={false}
                                hiddenRightButton={false}
                                href={
                                  Object {
                                    "selectHandler": [Function],
                                    "sizing": "normal",
                                  }
                                }
                                id=""
                                layout={5}
                                left=""
                                leftButton={null}
                                location="none"
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                obj="ListItem"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onDoubleClick={[Function]}
                                onError={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyPress={[Function]}
                                onMouseOut={[Function]}
                                onSelect={[Function]}
                                onUpdate={[Function]}
                                padding=""
                                reset={false}
                                rightButton={null}
                                selected={false}
                                sizing="normal"
                                stacked={false}
                                style={
                                  Object {
                                    "padding": "2px 4px",
                                  }
                                }
                                testing={true}
                                text="test title"
                                theme={null}
                                title="test title"
                                tooltip=""
                                top=""
                                useedit={false}
                                visible={false}
                                widget={null}
                                width=""
                                xcss={
                                  Array [
                                    "
	text-align: left;
	flex: 5;
",
                                  ]
                                }
                              >
                                <ThemeProvider
                                  theme={
                                    Object {
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#c0c0c0",
                                      "color": "#000000",
                                      "headerBackgroundColor": "#004358",
                                      "headerForegroundColor": "#ffffff",
                                      "headerHoverColor": "#ffe11a",
                                      "hoverColor": "#c0c0c0",
                                      "inputBorderColor": "#c0c0c0",
                                      "itemHoverColor": "#bedb39",
                                      "selectedBackgroundColor": "#1f8a70",
                                      "selectedForegroundColor": "#ffe11a",
                                      "titleBarBackgroundColor": "#004358",
                                      "titleBarForegroundColor": "#ffe11a",
                                      "tooltipBackgroundColor": "#708090",
                                      "tooltipForegroundColor": "#ffffff",
                                      "transitionDelay": "0.5s",
                                    }
                                  }
                                >
                                  <styled.span
                                    className="ui-label ui-title sc-gqjmRU hmXoVc"
                                    contentEditable={false}
                                    disabled={false}
                                    innerRef={[Function]}
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onDoubleClick={[Function]}
                                    onKeyDown={[Function]}
                                    onKeyPress={[Function]}
                                    sizing="normal"
                                    style={
                                      Object {
                                        "padding": "2px 4px",
                                      }
                                    }
                                    suppressContentEditableWarning={true}
                                    visible={false}
                                  >
                                    <span
                                      className="ui-label ui-title sc-gqjmRU hmXoVc sc-dnqmqq bzVSIx"
                                      contentEditable={false}
                                      disabled={false}
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onDoubleClick={[Function]}
                                      onKeyDown={[Function]}
                                      onKeyPress={[Function]}
                                      style={
                                        Object {
                                          "padding": "2px 4px",
                                        }
                                      }
                                      suppressContentEditableWarning={true}
                                    >
                                      test title
                                    </span>
                                  </styled.span>
                                </ThemeProvider>
                              </Wrapper>
                            </Label>
                          </Styled(Label)>
                        </div>
                      </styled.div>
                    </ThemeProvider>
                  </Wrapper>
                </Title>
              </li>
            </styled.li>
          </ThemeProvider>
        </Wrapper>
      </Item>
    </ThemeProvider>
  </Wrapper>
</ListItem>
`;

exports[`Test retrieval of ListItem props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "hiddenLeftButton": false,
  "hiddenRightButton": false,
  "href": Object {
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": "",
  "layout": 5,
  "left": "",
  "leftButton": null,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "ListItem",
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onMouseOut": [Function],
  "onSelect": [Function],
  "onUpdate": [Function],
  "padding": "",
  "rightButton": null,
  "selected": false,
  "sizing": "normal",
  "stacked": false,
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "​",
  "tooltip": "",
  "top": "",
  "useedit": false,
  "visible": true,
  "widget": null,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the creation of a ListItem control with left & right title 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onError={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding=""
  reset={false}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title left"
  tooltip=""
  top=""
  useedit={false}
  visible={true}
  widget="test title right"
  width=""
  xcss={null}
>
  <Item
    bottom=""
    className="ui-listitem"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding=""
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title left"
    tooltip=""
    top=""
    useedit={false}
    visible={true}
    widget="test title right"
    width=""
    xcss={null}
  />
</Wrapper>
`;

exports[`Test the creation of a ListItem control with simple title 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onError={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  padding=""
  reset={false}
  rightButton={null}
  selected={true}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip=""
  top=""
  useedit={false}
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <Item
    bottom=""
    className="ui-listitem"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    padding=""
    rightButton={null}
    selected={true}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip=""
    top=""
    useedit={false}
    visible={true}
    widget={null}
    width=""
    xcss={null}
  />
</Wrapper>
`;
